# Training-Model

./: .gitignore  Cashew  IMPROVEMENTS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default_config.yaml  mistral_7b.yaml  mistral_lora_example.yaml  test_config.yaml
data/: sample.jsonl
examples/: simple_training_example.py
notebooks/: README.md
scripts/: clone_cashew.sh  inference.py  preprocess.py  setup.py  train.py
src/: __init__.py
src/config/: training_config.py
src/data/: build_dataset.py  preprocessor.py
src/training/: train_lora.py  trainer.py
src/training_model/configs/: training_config.py
src/training_model/data/: cli.py  data_processor.py
src/training_model/evaluation/: metrics.py
src/training_model/training/: cli.py  trainer.py
src/training_model/utils/: logging_utils.py
src/utils/: evaluation.py
tests/: smoke_test.py
